<!--
  ~ Copyright (c) 2015 Sowmya Sathyamurthy
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">TrackXpense</string>
    <string name="label_category">Category</string>
    <string name="label_amount">Amount</string>
    <string name="label_date">Date</string>
    <string name="label_description">Description</string>
    <string name="label_categorytypes">Category Types</string>
    <string name="label_viewexpense">VIEW EXPENSE REPORT</string>
    <string name="label_viewincome">VIEW INCOME</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_addexpense">Add Expense</string>
    <string name="button_viewexpense">View Expenses</string>
    <string name="button_addcategory">Add Category</string>
    <string name="button_viewcategory">View Categories</string>
    <string name="button_addincome">Add Income</string>
    <string name="button_viewincome">View Income</string>
    <string name="label_addexpense">ADD EXPENSE DETAILS</string>
    <string name="label_addincome">ADD INCOME DETAILS</string>
    <string name="label_addcategory">ADD CATEGORY DETAILS</string>

    <string name="message_no_category">No category yet! Add a new category</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_select">Select</string>
</resources>
