<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Sowmya Sathyamurthy
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/AddIncomeActivity"
    android:background="@color/golden"
    android:theme="@style/AppTheme">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_addincome"
        android:id="@+id/label_AddIncome" />

    <ImageButton
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:src="@drawable/home_icon"
        android:layout_alignParentRight="true"
        android:id="@+id/buttonHome"
        android:contentDescription="Home"/>

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHome"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:paddingLeft="3dip"
        android:paddingRight="3dip" >

        <TableRow>
            <TextView
                android:layout_width="75dip"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                android:id="@+id/labelCategory" />
            <Spinner
                android:layout_width="75dip"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCategory"
                android:prompt="@string/prompt_select"
                android:spinnerMode="dropdown"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="visible" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="75dip"
                android:layout_height="wrap_content"
                android:text="@string/label_amount"
                android:id="@+id/labelAmount" />

            <EditText
                android:layout_width="100dip"
                android:layout_height="50dip"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amount"
                android:layout_marginRight="5dip"
                android:maxLength="10"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="75dip"
                android:text="@string/label_date"
                android:id="@+id/labelDate" />
            <EditText
                android:layout_height="50dip"
                android:layout_width="100dip"
                android:id="@+id/date"
                android:inputType="date"
                android:ems="10"
                android:width="5dp"
                android:hint="mm/dd/yyyy">
            </EditText>
            <ImageButton
                android:layout_height="50dip"
                android:layout_width="50dip"
                android:id="@+id/calendaricon"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/label_description"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="75dip"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:id="@+id/labelDescription"/>

            <EditText
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/description"
                android:layout_column="1" />


        </TableRow>
    </TableLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/mainTable"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_cancel"
        android:id="@+id/buttonCancel"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/mainTable"
        android:layout_toRightOf="@+id/buttonSave" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:id="@+id/buttonDelete"
        android:layout_below="@id/mainTable"
        android:layout_toRightOf="@+id/buttonCancel"
        android:visibility="gone"/>


</RelativeLayout>