<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Sowmya Sathyamurthy
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AddExpenseActivity"
    android:background="@color/golden"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_marginBottom="75dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="0.95"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_addexpense"
        android:id="@+id/label_AddExpense" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_weight="0.05"
        android:src="@drawable/home_icon"
        android:background="@color/golden"
        android:layout_alignParentRight="true"
        android:id="@+id/buttonHome"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1" >


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/label_category"
                android:layout_marginLeft="100dip"
                android:id="@+id/labelCategory" />
            <Spinner
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="100dip"
                android:id="@+id/spinnerCategory"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/label_amount"
                android:id="@+id/labelAmount"
                android:layout_marginLeft="100dip"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="100dip"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amount"
                android:maxLength="10"/>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="0.3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_date"
                android:id="@+id/labelDate"
                android:layout_marginLeft="100dip"/>

            </LinearLayout>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dip">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText1"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="mm/dd/yyyy"/>
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/calendaricon"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="@string/label_description"
                    android:layout_marginRight="10dip"
                    android:background="@color/golden" />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/label_description"
                android:layout_marginLeft="100dip"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="100dip"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/description"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTable"
        android:layout_marginTop="75dip"
        android:id="@+id/layout3">
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:width="100dip"
        android:text="@string/button_save"
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginLeft="150dip"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:width="100dip"
        android:text="@string/button_cancel"
        android:id="@+id/buttonCancel"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/buttonSave"
        android:layout_marginLeft="25dip"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dip"
        android:text="@string/button_delete"
        android:id="@+id/buttonDelete"
        android:layout_below="@id/mainTable"
        android:layout_toRightOf="@+id/buttonCancel"
        android:visibility="gone"
        android:layout_marginLeft="25dip"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>