<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Sowmya Sathyamurthy
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_marginBottom="75dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.95"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_categorytypes"
        android:id="@+id/labelCategoryTypes"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:id="@+id/buttonHome"
        android:src="@drawable/home_icon"
        android:layout_gravity="right"
        android:background="@color/golden"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textMessage" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@id/android:list" />

    </LinearLayout>
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="75dip">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dip"
            android:layout_marginLeft="200dip"
            android:text="@string/button_addcategory"
            android:id="@+id/buttonAddCategory" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dip"
            android:layout_marginLeft="25dip"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel" />
    </TableRow>

</RelativeLayout>